--- a/ansible/elasticsearch-mini/main.yml
+++ b/ansible/elasticsearch-mini/main.yml
@@ -1,16 +1,36 @@
 ---
 - hosts: localhost
+  vars:
+    elastic_repos_url: https://artifacts.elastic.co/packages/7.x
+    elastic_gpg_key_url: https://artifacts.elastic.co/GPG-KEY-elasticsearch
   tasks:
-    - name: add yum repository
-      yum_repository:
-        name: elasticsearch-7.x
-        state: present
-        baseurl: https://artifacts.elastic.co/packages/7.x/yum
-        description: Elasticsearch repository for 7.x packages
-        gpgcheck: yes
-        gpgkey: https://artifacts.elastic.co/GPG-KEY-elasticsearch
+    - when: ansible_facts['os_family'] == "RedHat"
+      block:
+      - name: add yum repository
+        yum_repository:
+          name: elasticsearch-7.x
+          state: present
+          baseurl: "{{ elastic_repos_url }}/yum"
+          description: Elasticsearch repository for 7.x packages
+          gpgcheck: yes
+          gpgkey: "{{ elastic_gpg_key_url }}"
+    - when: ansible_facts['os_family'] == "Debian"
+      block:
+      - name: install apt-transport-https package
+        apt:
+          name: apt-transport-https
+          state: present
+      - name: add apt repository key
+        apt_key:
+          url: "{{ elastic_gpg_key_url }}"
+          state: present
+      - name: add apt repository
+        apt_repository:
+          repo: "deb {{ elastic_repos_url }}/apt stable main"
+          state: present
+
     - name: install elasticsearch package
-      yum:
+      package:
         name: elasticsearch
         state: present
     - name: start elasticsearch
