--- a/eck/elasticsearch.yml
+++ b/eck/elasticsearch.yml
@@ -1,13 +1,15 @@
 ---
-apiVersion: elasticsearch.k8s.elastic.co/v1alpha1
+apiVersion: elasticsearch.k8s.elastic.co/v1
 kind: Elasticsearch
 metadata:
   name: quickstart
 spec:
-  version: 7.4.0
-  nodes:
-  - nodeCount: 1
+  version: 7.7.1
+  nodeSets:
+  - name: default
+    count: 1
     config:
       node.master: true
       node.data: true
       node.ingest: true
+      node.store.allow_mmap: false
