update makefile and requirements

--- a/python/Makefile
+++ b/python/Makefile
@@ -1,27 +1,24 @@
+VENV := $(HOME)/.venvs/tools
+
+.PHONY: venv
 venv:
-	python3 -m venv venv
+	python3 -m venv $(VENV)
 
 .PHONY: pip
 pip: venv
-	venv/bin/pip install -qr requirements.txt
-	venv/bin/pip install -qr test-requirements.txt
+	$(VENV)/bin/pip install -qr requirements.txt
 
 *.py: pip
-	venv/bin/python3 $@ $(ARGS)
+	$(VENV)/bin/python3 $@ $(ARGS)
 
 .PHONY: lint
 lint: pip
-	venv/bin/flake8 *.py
+	$(VENV)/bin/flake8 *.py
 
 .PHONY: format
 format: pip
-	venv/bin/black *.py
+	$(VENV)/bin/black *.py
 
 .PHONY: ipython
 ipython: pip
-	venv/bin/ipython
-
-.PHONY: clean
-clean:
-	rm -fr venv
-
+	$(VENV)/bin/ipython
