--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -2,6 +2,7 @@ black==21.10b0
 flake8==4.0.1
 flask==2.0.2
 ipython==7.31.1
+pylint==2.12.2
 pytest==6.2.5
 pytest-cov==3.0.0
 pytest-random-order==1.0.4
