--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,11 +1,12 @@
-black==21.10b0
-flake8==4.0.1
-flask==2.0.2
-ipython==7.31.1
-pylast==4.4.0
-pylint==2.12.2
-pytest==6.2.5
+black==22.6.0
+flake8==5.0.4
+flask==2.2.2
+ipython==8.4.0
+isort==5.10.1
+pylast==5.0.0
+pylint==2.15.0
+pytest==7.1.2
 pytest-cov==3.0.0
 pytest-random-order==1.0.4
-python-gnupg==0.4.7
-spotipy==2.19.0
+python-gnupg==0.5.0
+spotipy==2.20.0
